--- a/evennement_ru/evennement.scss
+++ b/evennement_ru/evennement.scss
@@ -57,65 +57,89 @@
 	margin: 0px;
 	padding: 0px;
 }
-.menu{
-	background-color: #F39C12;
-	position: fixed;
-	z-index: +20;
-	width: 1707px;
-	height: 70px;
-	.logo_for_menu{
-		width: 70px;
-		height: 50px;
-		margin-left: 350px;
-		margin-top: 10px;
 
-	}
-	ul	{
-		list-style: none;
-		font-family: 'Comfortaa';
-		display: flex;
-		font-size: 20px;
-		margin-left: 400px;
-		margin-top: -40px;
-		li{
-			margin-left: 40px;
-		}
-		a{
-			text-decoration: none;
-			color: white;
-		}
-   }
+.menu{
+  background: #F39C12;
+  position: fixed;
+  width: 100%;
+  z-index: 20;
 }
-.btn-group{
-	    button{
-	   	color: white;
-			border: none;	
-			background-color: #F39C12;
-			font-family: "Comfortaa";
-			font-size: 20px;
-			box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
-			border-radius: 50px;
-			padding: 10px 15px 10px 15px;
-			cursor: pointer;
-			margin-top: -10px;
-	   }
-	   .dropdown-menu{
-	   	display: block;
-	   	a{
-	   		text-decoration: none;
-	   		background-color: #F39C12;
-	   		padding: 10px 20px 10px 20px;
-				width: 130px;
-				text-align: center;
-				display: inline-block;
-				margin-left: -80px;
-				display: none;
-	   	}
-	   	a:hover{
-	   		background-color: rgb(233, 30, 99);
-	   	}
-	   }
-   }
+.menu a{
+  text-decoration: none;
+}
+.menu nav{
+  position: relative;
+  display: flex;
+  margin: 0 auto;
+  height: 70px;
+  align-items: center;
+  justify-content: space-between;
+}
+nav .content{
+  display: flex;
+}
+nav .content .links{
+  margin-left: 80px;
+  display: flex;
+}
+.logph{
+    width: 70px;
+    height: 50px;
+    margin-left: 350px;
+    margin-top: 10px;
+}
+.content .links li{
+  list-style: none;
+  line-height: 70px;
+}
+.content .links li a,
+.content .links li label{
+  color: #fff;
+  font-size: 20px;
+  font-weight: 500;
+  padding: 9px 17px;
+  border-radius: 5px;
+  font-family: "Comfortaa";
+  transition: all 0.3s ease;
+}
+.content .links li label{
+  display: none;
+}
+.content .links .hover:hover{
+    text-decoration: line-through;
+    transition: 10s ease-in-out;
+}
+.menu .menu-icon{
+  display: none;
+}
+.menu input[type="checkbox"]{
+  display: none;
+}
+.content .links ul{
+  position: absolute;
+  background: #f39c12;
+  z-index: -1;
+  opacity: 0;
+  visibility: hidden;
+}
+.content .links li:hover > ul{
+  top: 70px;
+  opacity: 1;
+  visibility: visible;
+  transition: all 0.3s ease;
+}
+.content .links ul li a{
+  display: block;
+  width: 100%;
+  line-height: 30px;
+  border-radius: 0px !important;
+}
+.content .links ul li a:hover{
+  color: rgb(233, 30, 99);
+  background-color: white;
+}
+
+
 /*header start*/
 header{
 	background-color: black;
@@ -375,9 +399,12 @@ footer{
 			a{
 				text-decoration: none;
 				color: white;
+				transition: margin-left 1s;
 			}
 			a:hover{
 			   color: #ff8c00;
+			   margin-left: 20px;
+			   transition: margin-left 1s;
 		   }
 		}
 		.block_for_menu{
@@ -392,7 +419,13 @@ footer{
 			a{
 				text-decoration: none;
 				color: white;
+				transition: margin-left 1s;
 			}
+			a:hover{
+			   color: #ff8c00;
+			   margin-left: 20px;
+			   transition: margin-left 1s;
+		   }
 		}
 		.block_for_adress{
 			.adress{
@@ -402,6 +435,16 @@ footer{
 				margin-left: 830px;
 				margin-top: -320px;
 			}
+			.adress a{
+				text-decoration: none;
+				color: white;
+				transition: margin-left 1s;
+			}
+			.adress a:hover{
+			   color: #ff8c00;
+			   margin-left: 20px;
+			   transition: margin-left 1s;
+		   }
 			.amail{
 				margin-top: 30px;
 				font-family: "Raleway";
@@ -409,39 +452,57 @@ footer{
 				margin-left: 899px;
 				a{
 					text-decoration: none;
+					transition: margin-left 1s;
 				}
+				a:hover{
+				   color: #ff8c00;
+				   margin-left: 20px;
+				   transition: margin-left 1s;
+		      }
 			}
 		}
 		.block_with_img_link{
+			width: 200px;
 			.instagram{
 				width: 50px;
 				margin-left: 920px;
 				margin-top: 50px;
 				margin-right: 20px;
+				position: absolute;
 			}
 			.facebook{
 				width: 50px;
-				margin-right: 20px;
+				margin-left: 1010px;
+				margin-top: 50px;
+				position: absolute;
 			}
 			.telega{
 				width: 50px;
+				position: absolute;
+				margin-top: 50px;
+				margin-left: 1090px;
 			}
          .gmail_youtube{
          	.gmail{
 					width: 110px;
-					margin-top:20px;
-					margin-left: 910px;
+					margin-top:120px;
+					margin-left: 934px;
+					position: absolute;
 			   }
 				.youtube{
 					width: 80px;
+					position: absolute;
+					margin-top:125px;
+					margin-left: 1040px;
 				}
          }
 		}
 		.block_with_img{
 			position: absolute;
+			width: 200px;
 			.Uk{
 				margin-left: 1410px;
-				margin-top: -280px;
+				margin-top: -90px;
 				.uk{
 					width: 80px;
 				}
@@ -480,10 +541,10 @@ footer{
 	}
 		.line_1{
 			 transform: skew( 0deg, -60deg);
-		    background-color: #282323;
+		    background-color: 	#282323;
 		    width: 70px;
 		    height: 200px;
-		    margin-top: -35px;
+		    margin-top: 135px;
 		    position: absolute;
 		    margin-left: 1618px;
 		    position: absolute;
@@ -495,16 +556,18 @@ footer{
 		   height: 200px;
 		   transform: skew( 0deg, 60deg);
 		   margin-left: 1548px;
-		   margin-top: -36px;
+		   margin-top: 133px;
+		   position: absolute;
 		}
 		.line_3{
-			background-color: #282323;
+			background-color:#282323;
 			transform: skew(0 , -40deg);
 			width: 110px;
 			height: 110px;
 			margin-left: 1450px;
-			margin-top: -130px;
+			margin-top: 200px;
 			position: absolute;
+			z-index: 0;
 		}
 		.line_4{
 			background-color: #282323;
@@ -512,9 +575,11 @@ footer{
 			width: 150px;
 			height: 110px;
 			margin-left: 1300px;
-			margin-top: -147px;
+			margin-top: 182px;
+			position: absolute;
 		}
 		.block_about_cite{
+			margin-top: 315px;
 			p{
 				font-size: 35px;
 				margin-left: 50px;
