--- a/sob4.css
+++ b/sob4.css
@@ -1,180 +1,374 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
-body{
-	line-height: 1.5;
-	font-family: 'Poppins', sans-serif;
+@charset "UTF-8";
+@font-face {
+  font-family: "Comfortaa";
+  font-display: swap;
+  src: url("style/Comfortaa/Comfortaa-VariableFont_wght.ttf");
+  src: local("O"), url("style/Comfortaa/Comfortaa-VariableFont_wght.ttf") format("truetype"), url("style/Comfortaa/Comfortaa-VariableFont_wght.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
 }
-*{
-	margin:0;
-	padding:0;
-	box-sizing: border-box;
+@font-face {
+  font-family: "Montserrat";
+  font-display: swap;
+  src: url("style/Montserrat/Montserrat-Light.ttf");
+  src: local("O"), url("style/Montserrat/Montserrat-Light.ttf") format("truetype"), url("style/Montserrat/Montserrat-Light.ttf") format("truetype");
+  font-weight: 300;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Poiret_One";
+  font-display: swap;
+  src: url("style/Poiret_One/PoiretOne-Regular.ttf");
+  src: local("O"), url("style/Poiret_One/PoiretOne-Regular.ttf") format("truetype"), url("style/Poiret_One/PoiretOne-Regular.ttf") format("truetype");
+  font-weight: 300;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Open_Sans";
+  font-display: swap;
+  src: url("style/Open_Sans/OpenSans-Light.ttf");
+  src: local("O"), url("style/Open_Sans/OpenSans-Light.ttf") format("truetype"), url("style/Open_Sans/OpenSans-Light.ttf") format("truetype");
+  font-weight: 300;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Raleway";
+  font-display: swap;
+  src: url("style/Raleway/static/Raleway-Light.ttf");
+  src: local("O"), url("style/Raleway/static/Raleway-Light.ttf") format("truetype"), url("style/Raleway/static/Raleway-Light.ttf") format("truetype");
+  font-weight: 300;
+  font-style: normal;
+}
+* {
+  margin: 0px;
+  padding: 0px;
 }
 
-.wrapper {
-	width: 1170px;
-	margin: 0 auto;
+.menu {
+  background-color: #F39C12;
+  position: fixed;
+  z-index: 20;
+  width: 1900px;
+  height: 70px;
 }
+.menu .logo_for_menu {
+  width: 70px;
+  height: 50px;
+  margin-left: 350px;
+  margin-top: 10px;
+}
+.menu ul {
+  list-style: none;
+  font-family: "Comfortaa";
+  display: flex;
+  font-size: 20px;
+  margin-left: 400px;
+  margin-top: -40px;
+  padding-bottom: 20px;
+  /*block for language*/
+}
+/* Dropdown Button */
+.dropbtn {
+    background-color: #4CAF50;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+}
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+.dropdown-content a:hover {background-color: #ddd;}
+.dropdown:hover .dropdown-content {display: block;}
+.dropdown:hover .dropbtn {background-color: #3e8e41;}
+ 	
+}	
+.menu ul li {
+  margin-left: 50px;
+}
+.menu ul a {
+  text-decoration: none;
+  color: white;
+}
+.menu ul button {
+  color: white;
+  border: none;
+  background-color: #F39C12;
+  font-family: "Comfortaa";
+  font-size: 20px;
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+  border-radius: 50px;
+  padding: 10px 15px 10px 15px;
+  margin-top: -10px;
+  cursor: pointer;
+}
+.menu ul ul {
+  margin-left: -180px;
+  margin-top: 46px;
+  position: absolute;
+  display: inline-block;
+  display: none;
+}
+.menu ul ul li a {
+  text-decoration: none;
+  color: white;
+  background-color: #F39C12;
+  font-size: 20px;
+  padding: 10px 20px 10px 20px;
+  width: 130px;
+  text-align: center;
+  display: inline-block;
+}
+.menu ul ul li a:hover {
+  color: white;
+  background-color: #e91e63;
+}
+.menu ul menu ul li:hover ul {
+  display: block;
+}
+
 header {
-	height: 100px;
-	background: #f78f19;
-	width: 100%;
-	z-index: 10;
-	position: fixed;
+ 
 }
-.logo {
-	width: 30%;
-	float: left;
-	line-height: 100px;
-}
-.logo a {
-	text-decoration: none;
-	font-size: 30px;
-	font-family: poppins;
-	color: #fff;
-	letter-spacing: 5px;
-}
-nav {
-	float: right;
-	line-height: 100px;
-}
-nav a {
-	text-decoration: none;
-	font-family: poppins;
-	letter-spacing: 4px;
-	font-size: 20px;
-	margin: 0 10px;
-	color: #fff;
+header .first-text {
+  font-size: 50px;
+  margin-top: 100px;
+  margin-left: 650px;
+  position: absolute;
+  font-family: "Comfortaa";
 }
 
-.head {
-	width: 100%;
-	height: 500px;
-	top: 100px;
-	background-color: black;
-	-webkit-background-size: cover;
-	background-size: cover;
-	
-	padding-top: 8%;
-	font-size: 70px;
-	font-family: poppins;
-	text-transform: uppercase;
-	color: #fff;
+footer {
+  background-color: #282323;
+  height: 500px;
+  margin-top: 0px;
 }
-
-.button{ 
-	width: 200px;
-	height: 20px;
-	color: blanchedalmond;
-	border-radius: 20%;
-	border: 2px solid #f78f19;
+footer .block_img img {
+  margin-left: 40px;
+  height: 90px;
+  margin-top: 200px;
 }
-
-.content-area {
-	width: 100%;
-	
-	top: 450px;
-	background: #ebebeb;
-	
+footer .text .block_menu {
+  margin-left: 200px;
+  font-family: "Open_Sans";
+  margin-top: -260px;
+  text-shadow: 0 0 10px #FF8C00, 0 0 20px #FF8C00, 0 0 40px #FF8C00, 0 0 80px #FF8C00, 0 0 120px #FF8C00;
 }
-
-.content-area h2 {
-	font-family: poppins;
-	letter-spacing: 4px;
-	padding-top: 30px;
-	font-size: 40px;
-	margin: 0;
+footer .text .block_menu li {
+  display: inline;
+  font-size: 40px;
 }
-.content-area p {
-	padding: 2% 0px;
-	font-family: poppins;
-	line-height: 30px;
+footer .text .block_menu li .help {
+  padding-right: 220px;
 }
-
-.container{
-	max-width: 1170px;
-	margin:auto;
+footer .text .block_menu li .contacts {
+  padding-left: 160px;
+  padding-right: 200px;
 }
-.row{
-	display: flex;
-	flex-wrap: wrap;
+footer .text .block_menu li a {
+  text-decoration: none;
+  color: white;
 }
-ul{
-	list-style: none;
+footer .text .block_for_help {
+  margin-left: 200px;
+  margin-top: 50px;
+  font-family: "Raleway";
+  font-size: 18px;
 }
-.wrapper2{ 
-	background-color: #ffff00;
+footer .text .block_for_help li {
+  list-style-type: none;
+  padding-bottom: 30px;
 }
-.wrapper4{
-	 background-color:red;
+footer .text .block_for_help a {
+  text-decoration: none;
+  color: white;
 }
-.footer{
-	background-color: #000;
-    padding: 70px 0;
+footer .text .block_for_menu {
+  margin-left: 590px;
+  margin-top: -360px;
+  font-family: "Raleway";
+  font-size: 20px;
 }
-.footer-col{
-   width: 25%;
-   padding: 0 15px;
+footer .text .block_for_menu li {
+  list-style-type: none;
+  padding-bottom: 30px;
 }
-.footer-col h4{
-	font-size: 18px;
-	color: #ffffff;
-	text-transform: capitalize;
-	margin-bottom: 35px;
-	font-weight: 500;
-	position: relative;
+footer .text .block_for_menu a {
+  text-decoration: none;
+  color: white;
 }
-.footer-col h4::before{
-	content: '';
-	position: absolute;
-	left:0;
-	bottom: -10px;
-	background-color: #e91e63;
-	height: 2px;
-	box-sizing: border-box;
-	width: 50px;
+footer .text .block_for_adress .adress {
+  color: white;
+  font-family: "Raleway";
+  font-size: 25px;
+  margin-left: 830px;
+  margin-top: -320px;
 }
-.footer-col ul li:not(:last-child){
-	margin-bottom: 10px;
+footer .text .block_for_adress .amail {
+  margin-top: 30px;
+  font-family: "Raleway";
+  font-size: 25px;
+  margin-left: 899px;
 }
-.footer-col ul li a{
-	font-size: 16px;
-	text-transform: capitalize;
-	color: #ffffff;
-	text-decoration: none;
-	font-weight: 300;
-	color: #bbbbbb;
-	display: block;
-	transition: all 0.3s ease;
+footer .text .block_for_adress .amail a {
+  text-decoration: none;
 }
-.footer-col ul li a:hover{
-	color: #ffffff;
-	padding-left: 8px;
+footer .text .block_with_img_link .instagram {
+  width: 50px;
+  margin-left: 920px;
+  margin-top: 50px;
+  margin-right: 20px;
 }
-.footer-col .social-links a{
-	display: inline-block;
-	height: 40px;
-	width: 40px;
-	background-color: rgba(255,255,255,0.2);
-	margin:0 10px 10px 0;
-	text-align: center;
-	line-height: 40px;
-	border-radius: 50%;
-	color: #ffffff;
-	transition: all 0.5s ease;
+footer .text .block_with_img_link .facebook {
+  width: 50px;
+  margin-right: 20px;
 }
-.footer-col .social-links a:hover{
-	color: #24262b;
-	background-color: #ffffff;
+footer .text .block_with_img_link .telega {
+  width: 50px;
 }
-
-/*responsive*/
-@media(max-width: 767px){
-  .footer-col{
-    width: 50%;
-    margin-bottom: 30px;
+footer .text .block_with_img_link .gmail_youtube .gmail {
+  width: 110px;
+  margin-top: 20px;
+  margin-left: 910px;
 }
+footer .text .block_with_img_link .gmail_youtube .youtube {
+  width: 80px;
 }
-@media(max-width: 574px){
-  .footer-col{
-    width: 100%;
+footer .text .block_with_img {
+  position: absolute;
 }
+footer .text .block_with_img .Uk {
+  margin-left: 1410px;
+  margin-top: -280px;
+}
+footer .text .block_with_img .Uk .uk {
+  width: 80px;
+}
+footer .text .block_with_img .Ra {
+  margin-left: 1410px;
+  margin-top: 20px;
+}
+footer .text .block_with_img .Ra .ra {
+  width: 80px;
+}
+footer .text .block_with_img .Usa {
+  margin-left: 1410px;
+  margin-top: 20px;
+}
+footer .text .block_with_img .Usa .usa {
+  width: 80px;
+}
+footer .text .block_with_img .Fr {
+  margin-left: 1410px;
+  margin-top: 20px;
+}
+footer .text .block_with_img .Fr .fr {
+  width: 80px;
+}
+footer .text .block_with_img .Ch {
+  margin-left: 1410px;
+  margin-top: 20px;
+}
+footer .text .block_with_img .Ch .ch {
+  width: 80px;
+  z-index: 10;
+  position: absolute;
+}
+footer .line_1 {
+  transform: skew(0deg, -60deg);
+  background-color: #282323;
+  width: 70px;
+  height: 200px;
+  margin-top: -35px;
+  position: absolute;
+  margin-left: 1618px;
+  position: absolute;
+  z-index: 0;
+}
+footer .line_2 {
+  background-color: #282323;
+  width: 70px;
+  height: 200px;
+  transform: skew(0deg, 60deg);
+  margin-left: 1548px;
+  margin-top: -36px;
+}
+footer .line_3 {
+  background-color: #282323;
+  transform: skew(0, -40deg);
+  width: 110px;
+  height: 110px;
+  margin-left: 1450px;
+  margin-top: -130px;
+  position: absolute;
+}
+footer .line_4 {
+  background-color: #282323;
+  transform: skew(0, 40deg);
+  width: 150px;
+  height: 110px;
+  margin-left: 1300px;
+  margin-top: -147px;
+}
+footer .block_about_cite p {
+  font-size: 35px;
+  margin-left: 50px;
+  font-family: "Poiret_One";
+}
+footer .block_about_cite .insta {
+  margin-left: 350px;
+  position: absolute;
+}
+footer .block_about_cite .insta img {
+  height: 50px;
+  margin-top: -50px;
+}
+footer .block_about_cite .telega_oleksandr {
+  margin-left: 430px;
+  position: absolute;
+}
+footer .block_about_cite .telega_oleksandr img {
+  height: 50px;
+  margin-top: -55px;
+}
+footer .block_about_cite .telega_Aahzmandiuss {
+  position: absolute;
+  margin-left: 510px;
+}
+footer .block_about_cite .telega_Aahzmandiuss img {
+  height: 50px;
+  margin-top: -55px;
+}
+footer .block_about_cite .telega_Dana {
+  position: absolute;
+  margin-left: 590px;
+}
+footer .block_about_cite .telega_Dana img {
+  height: 50px;
+  margin-top: -55px;
+}
+footer .arrow {
+  position: absolute;
+  z-index: 0;
+}
+footer .arrow img {
+  margin-top: -70px;
+  height: 80px;
+  position: absolute;
+  margin-left: 1585px;
 }
