--- a/Sasha/style.css
+++ b/Sasha/style.css
@@ -93,9 +93,10 @@ nav .content .links{
   background-color: white;
 }
 .sport1{ 
-  padding-top: 70px;
+  padding-top: 75px;
   display: flex;
   justify-content: space-around;
+  align-img:center;
 }
 .text1{ 
   padding-bottom: 35px;
@@ -114,6 +115,7 @@ nav .content .links{
 .sport2{ 
   display: flex;
   justify-content: space-around;
+  align-img:center;
 }
 .text2{ 
   padding-bottom:35px;
@@ -128,11 +130,7 @@ nav .content .links{
   line-height: 45px;
   color: #000000;
 }
-.sport3{ 
-  display: flex;
-  justify-content: space-around;
-}
-.text3{ 
+.text31{ 
   padding-left: 335px;
   display: flex;
   justify-content: space-around;
@@ -142,6 +140,34 @@ nav .content .links{
   font-size: 35px;
   line-height: 45px;
   color: #000000;
+}
+.text13{ 
+  padding-left: 335px;
+  display: flex;
+  justify-content: space-around;
+  width: 1102px;
+  left: 112px;
+  top: 500px;
+  font-size: 35px;
+  line-height: 45px;
+  color: #000000;
+}
+
+.sport3{
+  display: flex;
+  justify-content: space-around;
+  align-img:center;
+}
+.page{
+display:flex;
+justify-content:space-around;
+text-decoration:none;
+color:#000;
+font-size:35px;
+
+}
+.page:hover{
+color:#F39C12;
 }
 
 
