--- a/Sasha/style.css
+++ b/Sasha/style.css
@@ -92,12 +92,7 @@ nav .content .links{
   color: rgb(233, 30, 99);
   background-color: white;
 }
-.sport1{ 
-  padding-top: 75px;
-  display: flex;
-  justify-content: space-around;
-  align-img:center;
-}
+
 .text1{ 
   padding-bottom: 35px;
   padding-top: 35px;
@@ -112,11 +107,6 @@ nav .content .links{
     color: #000000;
 }
 
-.sport2{ 
-  display: flex;
-  justify-content: space-around;
-  align-img:center;
-}
 .text2{ 
   padding-bottom:35px;
   padding-top: 35px;
@@ -152,14 +142,6 @@ nav .content .links{
   line-height: 45px;
   color: #000000;
 }
-
-.sport3{
-  display: flex;
-  justify-content: space-around;
-  align-img:center;
-
-
-}
 .page{
 display:flex;
 justify-content:space-around;
@@ -171,9 +153,39 @@ font-size:35px;
 color:#F39C12;
 }
 
+/*Затемнение*/
 
+.image-relative {
+  padding-top: 75px;
+  position: relative;
+  display: flex;
+  justify-content: space-around;
+  /*align-img:center;*/
 
-
+}
+.image-transition{
+  transition: display 1s ease-out;
+}
+.image-relative:hover .overlay {
+  display: flex;
+}
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: none;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  background-color: rgba(0, 0, 0, 0.5);
+  transition: display 1s ease-out;
+}
+.overlay h2 {
+  text-align: center;
+  color: #fff !important;
+}
 
 
 @font-face {
