--- a/Галерея/style.css
+++ b/Галерея/style.css
@@ -92,392 +92,385 @@
     color: rgb(233, 30, 99);
     background-color: white;
   }
+  
+  .text1{ 
+    padding-bottom: 35px;
+    padding-top: 35px;
+    padding-left: 335px;
+      display: flex;
+      justify-content: space-around;
+      width: 1102px;
+      left: 112px;
+      top: 500px;
+      font-size: 35px;
+      line-height: 45px;
+      color: #000000;
+  }
+  
+  .text2{ 
+    padding-bottom:35px;
+    padding-top: 35px;
+    padding-left: 335px;
+    display: flex;
+    justify-content: space-around;
+    width: 1102px;
+    left: 112px;
+    top: 500px;
+    font-size: 35px;
+    line-height: 45px;
+    color: #000000;
+  }
+  .text31{ 
+    padding-left: 335px;
+    display: flex;
+    justify-content: space-around;
+    width: 1102px;
+    left: 112px;
+    top: 500px;
+    font-size: 35px;
+    line-height: 45px;
+    color: #000000;
+  }
+  .text13{ 
+    padding-left: 335px;
+    display: flex;
+    justify-content: space-around;
+    width: 1102px;
+    left: 112px;
+    top: 500px;
+    font-size: 35px;
+    line-height: 45px;
+    color: #000000;
+  }
+  .page{
+  display:flex;
+  justify-content:space-around;
+  text-decoration:none;
+  color:#000;
+  font-size:35px;
+  }
+  .page:hover{
+  color:#F39C12;
+  }
+  
+/* content*/
+@import url(https://fonts.googleapis.com/css?family=Khula:700);
 
-  /*кохтент*/
- .main{ 
-   padding-top: 200px;
-   text-align: center;
-   font-size:50px;
-   color: #fff;
-   background-color: #282323;
- }
- @import url("https://fonts.googleapis.com/css?family=Syncopate");
+.hidden {
+  opacity:0;
+  
+}
+.console-container {
+  
+  font-family:Khula;
+  font-size:4em;
+  text-align:center;
+  height:200px;
+  width:600px;
+  display:block;
+  color:white;
+  top:0;
+  bottom:0;
+  left:0;
+  right:0;
+  margin:auto;
+}
+.console-underscore {
+   display:inline-block;
+  position:relative;
+  top:-0.14em;
+  left:10px;
+  margin-top: 150px;
+}
+
+.block3{ 
+  background-color:#FF9933;
+ text-align: center;
+}
+.gal2:hover~.gal1{ 
+  margin-bottom: 100px;
+  transition: 0.3s;
+}
+
+.gal1{ 
+  margin-left: 285px;
+  margin-top: 250px;
+  margin-right: -500px;
+  height:150px;
+  width:150px;
+  margin-bottom:-100px;
+}
+.gal2{
+  border-radius: 50%;
+  margin-left: 30%;
+}
+
+.gal3{ 
+margin-right: 50px;
+margin-top: 300px;
+height: 150px;
+width: 150px;
+margin-bottom: 100px;
+}
 
 
- p {
-   display: table-cell;
-   text-align: center;
-   vertical-align: middle;
-   font-size: 50px;
-   line-height: 2em;
- }
- i {
-   display: inline-block;
-   font-style: normal;
-   padding: 0 0.25em;
-   -webkit-transform: scale(0) translate3d(0, -2000px, 0);
-      -moz-transform: scale(0) translate3d(0, -2000px, 0);
-     -ms-transform: scale(0) translate3d(0, -2000px, 0);
-      -o-transform: scale(0) translate3d(0, -2000px, 0);
-       transform: scale(0) translate3d(0, -2000px, 0);
-   background: rgba(255, 255, 255, 0.3);
-   border-radius: 50%;
- }
- i.fly-in-out {
-   -webkit-animation: fly-in-out 3s infinite ease-in-out;
-      -moz-animation: fly-in-out 3s infinite ease-in-out;
-      -o-animation: fly-in-out 3s infinite ease-in-out;
-       animation: fly-in-out 3s infinite ease-in-out;
- }
- 
- @-webkit-keyframes fly-in-out {
-   0% {
-     -webkit-transform: scale(0) translate3d(0, -1000px, 0);
-     background: rgba(255, 255, 255, 0.3);
-     box-shadow: 0 0 100px 100px rgba(255, 255, 255, 0.2);
-     border-radius: 50%;
-   }
-   15%, 85% {
-     color: rgba(255, 255, 255, 0.8);
-     text-shadow: 0 0 5px rgba(255, 255, 255, 0.5);
-     -webkit-transform: scale(1) translate3d(0, 0, 0);
-     background: transparent;
-     box-shadow: none;
-   }
-   100% {
-     color: transparent;	
-     -webkit-transform: scale(0) translate3d(0, 1000px, 0);
-     background: rgba(255, 255, 255, 0.3);
-     box-shadow: 0 0 100px 100px rgba(255, 255, 255, 0.2);
-     border-radius: 50%;
-   }
- }
- @-moz-keyframes fly-in-out {
-   0% {
-     -moz-transform: scale(0) translate3d(0, -2000px, 0);
-     background: rgba(255, 255, 255, 0.3);
-     box-shadow: 0 0 100px 100px rgba(255, 255, 255, 0.2);
-     border-radius: 50%;
-   }
-   15%, 85% {
-     color: rgba(255, 255, 255, 0.8);
-     text-shadow: 0 0 5px rgba(255, 255, 255, 0.5);
-     -moz-transform: scale(1) translate3d(0, 0, 0);
-     background: transparent;
-     box-shadow: none;
-   }
-   100% {
-     color: transparent;	
-     -moz-transform: scale(0) translate3d(0, 2000px, 0);
-     background: rgba(255, 255, 255, 0.3);
-     box-shadow: 0 0 100px 100px rgba(255, 255, 255, 0.2);
-     border-radius: 50%;
-   }
- }
- @-o-keyframes fly-in-out {
-   0% {
-     -o-transform: scale(0) translate3d(0, -2000px, 0);
-     background: rgba(255, 255, 255, 0.3);
-     box-shadow: 0 0 100px 100px rgba(255, 255, 255, 0.2);
-     border-radius: 50%;
-   }
-   15%, 85% {
-     color: rgba(255, 255, 255, 0.8);
-     text-shadow: 0 0 5px rgba(255, 255, 255, 0.5);
-     -o-transform: scale(1) translate3d(0, 0, 0);
-     background: transparent;
-     box-shadow: none;
-   }
-   100% {
-     color: transparent;	
-     -o-transform: scale(0) translate3d(0, 2000px, 0);
-     background: rgba(255, 255, 255, 0.3);
-     box-shadow: 0 0 100px 100px rgba(255, 255, 255, 0.2);
-     border-radius: 50%;
-   }
- }
- @keyframes fly-in-out {
-   0% {
-     transform: scale(0) translate3d(0, -2000px, 0);
-     background: rgba(255, 255, 255, 0.3);
-     box-shadow: 0 0 100px 100px rgba(255, 255, 255, 0.2);
-     border-radius: 50%;
-   }
-   15%, 85% {
-     color: rgba(255, 255, 255, 0.8);
-     text-shadow: 0 0 5px rgba(255, 255, 255, 0.5);
-     transform: scale(1) translate3d(0, 0, 0);
-     background: transparent;
-     box-shadow: none;
-   }
-   100% {
-     color: transparent;	
-     transform: scale(0) translate3d(0, 2000px, 0);
-     background: rgba(255, 255, 255, 0.3);
-     box-shadow: 0 0 100px 100px rgba(255, 255, 255, 0.2);
-     border-radius: 50%;
-   }
- }
 
- img{ 
-   width: 150px;
-   height:150px;
- }
- .thre{ 
-   text-align: center;
- }
+.gal2:hover~.gal3{
+  margin-bottom:-100px;
+  transition: 0.3s;
+}
+
 
   
-/*footer start*/
-footer {
-  background-color: #282323;
-  height: 500px;
-  margin-top: 470px;
-  position: absolute;
-  width: 1700px;
-}
-footer .block_img img {
-  margin-left: 40px;
-  height: 90px;
-  margin-top: 200px;
-}
-footer .text .block_menu {
-  margin-left: 200px;
-  font-family: "Open_Sans";
-  margin-top: -260px;
-  text-shadow: 0 0 10px #FF8C00, 0 0 20px #FF8C00, 0 0 40px #FF8C00, 0 0 80px #FF8C00, 0 0 120px #FF8C00;
-}
-footer .text .block_menu li {
-  display: inline;
-  font-size: 40px;
-}
-footer .text .block_menu li .help {
-  padding-right: 220px;
-}
-footer .text .block_menu li .contacts {
-  padding-left: 160px;
-  padding-right: 200px;
-}
-footer .text .block_menu li a {
-  text-decoration: none;
-  color: white;
-}
-footer .text .block_for_help {
-  margin-left: 200px;
-  margin-top: 50px;
-  font-family: "Raleway";
-  font-size: 18px;
-}
-footer .text .block_for_help li {
-  list-style-type: none;
-  padding-bottom: 30px;
-}
-footer .text .block_for_help a {
-  text-decoration: none;
-  color: white;
-  transition: margin-left 1s;
-}
-footer .text .block_for_help a:hover {
-  color: #ff8c00;
-  margin-left: 20px;
-  transition: margin-left 1s;
-}
-footer .text .block_for_menu {
-  margin-left: 590px;
-  margin-top: -360px;
-  font-family: "Raleway";
-  font-size: 20px;
-}
-footer .text .block_for_menu li {
-  list-style-type: none;
-  padding-bottom: 30px;
-}
-footer .text .block_for_menu a {
-  text-decoration: none;
-  color: white;
-  transition: margin-left 1s;
-}
-footer .text .block_for_menu a:hover {
-  color: #ff8c00;
-  margin-left: 20px;
-  transition: margin-left 1s;
-}
-footer .text .block_for_adress .adress {
-  color: white;
-  font-family: "Raleway";
-  font-size: 25px;
-  margin-left: 830px;
-  margin-top: -320px;
-}
-footer .text .block_for_adress .adress a {
-  text-decoration: none;
-  color: white;
-  transition: margin-left 1s;
-}
-footer .text .block_for_adress .adress a:hover {
-  color: #ff8c00;
-  margin-left: 20px;
-  transition: margin-left 1s;
-}
-footer .text .block_for_adress .amail {
-  margin-top: 30px;
-  font-family: "Raleway";
-  font-size: 25px;
-  margin-left: 899px;
-}
-footer .text .block_for_adress .amail a {
-  text-decoration: none;
-  transition: margin-left 1s;
-}
-footer .text .block_for_adress .amail a:hover {
-  color: #ff8c00;
-  margin-left: 20px;
-  transition: margin-left 1s;
-}
-footer .text .block_with_img_link {
-  width: 200px;
-}
-footer .text .block_with_img_link .instagram {
-  width: 50px;
-  margin-left: 920px;
-  margin-top: 50px;
-  margin-right: 20px;
-  position: absolute;
-}
-footer .text .block_with_img_link .facebook {
-  width: 50px;
-  margin-left: 1010px;
-  margin-top: 50px;
-  position: absolute;
-}
-footer .text .block_with_img_link .telega {
-  width: 50px;
-  position: absolute;
-  margin-top: 50px;
-  margin-left: 1090px;
-}
-footer .text .block_with_img_link .gmail_youtube .gmail {
-  width: 110px;
-  margin-top: 120px;
-  margin-left: 934px;
-  position: absolute;
-}
-footer .text .block_with_img_link .gmail_youtube .youtube {
-  width: 80px;
-  position: absolute;
-  margin-top: 125px;
-  margin-left: 1040px;
-}
-footer .text .block_with_img {
-  position: absolute;
-  width: 200px;
-}
-footer .text .block_with_img .Uk {
-  margin-left: 1410px;
-  margin-top: -90px;
-}
-footer .text .block_with_img .Uk .uk {
-  width: 80px;
-}
-footer .text .block_with_img .Ra {
-  margin-left: 1410px;
-  margin-top: 20px;
-}
-footer .text .block_with_img .Ra .ra {
-  width: 80px;
-}
-footer .text .block_with_img .Usa {
-  margin-left: 1410px;
-  margin-top: 20px;
-}
-footer .text .block_with_img .Usa .usa {
-  width: 80px;
-}
-footer .text .block_with_img .Fr {
-  margin-left: 1410px;
-  margin-top: 20px;
-}
-footer .text .block_with_img .Fr .fr {
-  width: 80px;
-}
-footer .text .block_with_img .Ch {
-  margin-left: 1410px;
-  margin-top: 20px;
-}
-footer .text .block_with_img .Ch .ch {
-  width: 80px;
-  z-index: 10;
-  position: absolute;
-}
-footer .line_1 {
-  z-index: 0;
-  width: 0px;
-  height: 0px;
-  border-left: 70px solid transparent;
-  border-right: 70px solid transparent;
-  border-top: 160px solid #282323;
-  margin-left: 1560px;
-  margin-top: 270px;
-}
-footer .line_2 {
-  width: 0px;
-  height: 0px;
-  position: absolute;
-  border-left: 150px solid transparent;
-  border-right: 150px solid transparent;
-  border-top: 100px solid #282323;
-  margin-left: 1310px;
-  margin-top: -170px;
-}
-footer .block_about_cite {
-  margin-top: -100px;
-  position: absolute;
-}
-footer .block_about_cite p {
-  font-size: 35px;
-  margin-left: 50px;
-  font-family: "Poiret_One";
-}
-footer .block_about_cite .insta {
-  margin-left: 350px;
-  position: absolute;
-}
-footer .block_about_cite .insta img {
-  height: 50px;
-  margin-top: -50px;
-}
-footer .block_about_cite .telega_oleksandr {
-  margin-left: 430px;
-  position: absolute;
-}
-footer .block_about_cite .telega_oleksandr img {
-  height: 50px;
-  margin-top: -55px;
-}
-footer .block_about_cite .telega_Aahzmandiuss {
-  position: absolute;
-  margin-left: 510px;
-}
-footer .block_about_cite .telega_Aahzmandiuss img {
-  height: 50px;
-  margin-top: -55px;
-}
-footer .block_about_cite .telega_Dana {
-  position: absolute;
-  margin-left: 590px;
-}
-footer .block_about_cite .telega_Dana img {
-  height: 50px;
-  margin-top: -55px;
-}
-footer .arrow {
-  position: absolute;
-  z-index: 0;
-}
-footer .arrow img {
-  margin-top: -150px;
-  height: 80px;
-  position: absolute;
-  margin-left: 1600px;
-}
-  
+  /*footer start*/
+  footer {
+    background-color: #282323;
+    height: 500px;
+    margin-top: 470px;
+    position: absolute;
+    width: 1700px;
+  }
+  footer .block_img img {
+    margin-left: 40px;
+    height: 90px;
+    margin-top: 200px;
+  }
+  footer .text .block_menu {
+    margin-left: 200px;
+    font-family: "Open_Sans";
+    margin-top: -260px;
+    text-shadow: 0 0 10px #FF8C00, 0 0 20px #FF8C00, 0 0 40px #FF8C00, 0 0 80px #FF8C00, 0 0 120px #FF8C00;
+  }
+  footer .text .block_menu li {
+    display: inline;
+    font-size: 40px;
+  }
+  footer .text .block_menu li .help {
+    padding-right: 220px;
+  }
+  footer .text .block_menu li .contacts {
+    padding-left: 160px;
+    padding-right: 200px;
+  }
+  footer .text .block_menu li a {
+    text-decoration: none;
+    color: white;
+  }
+  footer .text .block_for_help {
+    margin-left: 200px;
+    margin-top: 50px;
+    font-family: "Raleway";
+    font-size: 18px;
+  }
+  footer .text .block_for_help li {
+    list-style-type: none;
+    padding-bottom: 30px;
+  }
+  footer .text .block_for_help a {
+    text-decoration: none;
+    color: white;
+    transition: margin-left 1s;
+  }
+  footer .text .block_for_help a:hover {
+    color: #ff8c00;
+    margin-left: 20px;
+    transition: margin-left 1s;
+  }
+  footer .text .block_for_menu {
+    margin-left: 590px;
+    margin-top: -360px;
+    font-family: "Raleway";
+    font-size: 20px;
+  }
+  footer .text .block_for_menu li {
+    list-style-type: none;
+    padding-bottom: 30px;
+  }
+  footer .text .block_for_menu a {
+    text-decoration: none;
+    color: white;
+    transition: margin-left 1s;
+  }
+  footer .text .block_for_menu a:hover {
+    color: #ff8c00;
+    margin-left: 20px;
+    transition: margin-left 1s;
+  }
+  footer .text .block_for_adress .adress {
+    color: white;
+    font-family: "Raleway";
+    font-size: 25px;
+    margin-left: 830px;
+    margin-top: -320px;
+  }
+  footer .text .block_for_adress .adress a {
+    text-decoration: none;
+    color: white;
+    transition: margin-left 1s;
+  }
+  footer .text .block_for_adress .adress a:hover {
+    color: #ff8c00;
+    margin-left: 20px;
+    transition: margin-left 1s;
+  }
+  footer .text .block_for_adress .amail {
+    margin-top: 30px;
+    font-family: "Raleway";
+    font-size: 25px;
+    margin-left: 899px;
+  }
+  footer .text .block_for_adress .amail a {
+    text-decoration: none;
+    transition: margin-left 1s;
+  }
+  footer .text .block_for_adress .amail a:hover {
+    color: #ff8c00;
+    margin-left: 20px;
+    transition: margin-left 1s;
+  }
+  footer .text .block_with_img_link {
+    width: 200px;
+  }
+  footer .text .block_with_img_link .instagram {
+    width: 50px;
+    margin-left: 920px;
+    margin-top: 50px;
+    margin-right: 20px;
+    position: absolute;
+  }
+  footer .text .block_with_img_link .facebook {
+    width: 50px;
+    margin-left: 1010px;
+    margin-top: 50px;
+    position: absolute;
+  }
+  footer .text .block_with_img_link .telega {
+    width: 50px;
+    position: absolute;
+    margin-top: 50px;
+    margin-left: 1090px;
+  }
+  footer .text .block_with_img_link .gmail_youtube .gmail {
+    width: 110px;
+    margin-top: 120px;
+    margin-left: 934px;
+    position: absolute;
+  }
+  footer .text .block_with_img_link .gmail_youtube .youtube {
+    width: 80px;
+    position: absolute;
+    margin-top: 125px;
+    margin-left: 1040px;
+  }
+  footer .text .block_with_img {
+    position: absolute;
+    width: 200px;
+  }
+  footer .text .block_with_img .Uk {
+    margin-left: 1410px;
+    margin-top: -90px;
+  }
+  footer .text .block_with_img .Uk .uk {
+    width: 80px;
+  }
+  footer .text .block_with_img .Ra {
+    margin-left: 1410px;
+    margin-top: 20px;
+  }
+  footer .text .block_with_img .Ra .ra {
+    width: 80px;
+  }
+  footer .text .block_with_img .Usa {
+    margin-left: 1410px;
+    margin-top: 20px;
+  }
+  footer .text .block_with_img .Usa .usa {
+    width: 80px;
+  }
+  footer .text .block_with_img .Fr {
+    margin-left: 1410px;
+    margin-top: 20px;
+  }
+  footer .text .block_with_img .Fr .fr {
+    width: 80px;
+  }
+  footer .text .block_with_img .Ch {
+    margin-left: 1410px;
+    margin-top: 20px;
+  }
+  footer .text .block_with_img .Ch .ch {
+    width: 80px;
+    z-index: 10;
+    position: absolute;
+  }
+  footer .line_1 {
+    z-index: 0;
+    width: 0px;
+    height: 0px;
+    border-left: 70px solid transparent;
+    border-right: 70px solid transparent;
+    border-top: 160px solid #282323;
+    margin-left: 1560px;
+    margin-top: 270px;
+  }
+  footer .line_2 {
+    width: 0px;
+    height: 0px;
+    position: absolute;
+    border-left: 150px solid transparent;
+    border-right: 150px solid transparent;
+    border-top: 100px solid #282323;
+    margin-left: 1310px;
+    margin-top: -170px;
+  }
+  footer .block_about_cite {
+    margin-top: -100px;
+    position: absolute;
+  }
+  footer .block_about_cite p {
+    font-size: 35px;
+    margin-left: 50px;
+    font-family: "Poiret_One";
+  }
+  footer .block_about_cite .insta {
+    margin-left: 350px;
+    position: absolute;
+  }
+  footer .block_about_cite .insta img {
+    height: 50px;
+    margin-top: -50px;
+  }
+  footer .block_about_cite .telega_oleksandr {
+    margin-left: 430px;
+    position: absolute;
+  }
+  footer .block_about_cite .telega_oleksandr img {
+    height: 50px;
+    margin-top: -55px;
+  }
+  footer .block_about_cite .telega_Aahzmandiuss {
+    position: absolute;
+    margin-left: 510px;
+  }
+  footer .block_about_cite .telega_Aahzmandiuss img {
+    height: 50px;
+    margin-top: -55px;
+  }
+  footer .block_about_cite .telega_Dana {
+    position: absolute;
+    margin-left: 590px;
+  }
+  footer .block_about_cite .telega_Dana img {
+    height: 50px;
+    margin-top: -55px;
+  }
+  footer .arrow {
+    position: absolute;
+    z-index: 0;
+  }
+  footer .arrow img {
+    margin-top: -150px;
+    height: 80px;
+    position: absolute;
+    margin-left: 1600px;
+  }
