--- a/sob4_ru/sob4_ru.scss
+++ b/sob4_ru/sob4_ru.scss
@@ -62,7 +62,7 @@
   background: #F39C12;
   position: fixed;
   width: 100%;
-  z-index: 999;
+  z-index: 1000;
 }
 .menu a{
   text-decoration: none;
@@ -105,9 +105,10 @@ nav .content .links{
 .content .links li label{
   display: none;
 }
-.content .links .hover:hover{
-    text-decoration: line-through;
-    transition: 10s ease-in-out;
+.content .links .hover:hover a{
+    color: rgb(233, 30, 99);
+    transition: 1.5s ease-in-out;
+    background-color: white;
 }
 .menu .menu-icon{
   display: none;
@@ -1304,7 +1305,7 @@ footer {
   height: 500px;
   margin-top: 4470px;
   position: absolute;
-  width: 1687px;
+  width: 1688px;
 }
 footer .block_img img {
   margin-left: 40px;
@@ -1380,7 +1381,6 @@ footer .text .block_for_adress .adress {
   margin-top: -320px;
 }
 footer .text .block_for_adress .adress a {
-  text-decoration: none;
   color: white;
   transition: margin-left 1s;
 }
@@ -1398,6 +1398,7 @@ footer .text .block_for_adress .amail {
 footer .text .block_for_adress .amail a {
   text-decoration: none;
   transition: margin-left 1s;
+  color: white;
 }
 footer .text .block_for_adress .amail a:hover {
   color: #ff8c00;
@@ -1486,7 +1487,7 @@ footer .line_1 {
   border-left: 70px solid transparent;
   border-right: 70px solid transparent;
   border-top: 160px solid #282323;
-  margin-left: 1548px;
+  margin-left: 1548.4px;
   margin-top: 270px;
 }
 footer .line_2 {
@@ -1540,13 +1541,17 @@ footer .block_about_cite .telega_Dana img {
   height: 50px;
   margin-top: -55px;
 }
-footer .arrow {
+footer .back-to-top-btn{
   position: absolute;
   z-index: 0;
+  border: none;
 }
-footer .arrow img {
+footer .back-to-top-btn:focus{
+  border: none;
+}
+footer .back-to-top-btn img {
   margin-top: -150px;
   height: 80px;
   position: absolute;
-  margin-left: 1585px;
+  margin-left: 1590px;
 }
