--- a/sob4_ru/sob4_ru.css
+++ b/sob4_ru/sob4_ru.css
@@ -55,7 +55,7 @@
   background: #F39C12;
   position: fixed;
   width: 100%;
-  z-index: 999;
+  z-index: 1000;
 }
 
 .menu a {
@@ -107,9 +107,10 @@ nav .content .links {
   display: none;
 }
 
-.content .links .hover:hover {
-  text-decoration: line-through;
-  transition: 10s ease-in-out;
+.content .links .hover:hover a {
+  color: #e91e63;
+  transition: 1.5s ease-in-out;
+  background-color: white;
 }
 
 .menu .menu-icon {
@@ -1161,7 +1162,7 @@ footer {
   height: 500px;
   margin-top: 4470px;
   position: absolute;
-  width: 1687px;
+  width: 1688px;
 }
 
 footer .block_img img {
@@ -1253,7 +1254,6 @@ footer .text .block_for_adress .adress {
 }
 
 footer .text .block_for_adress .adress a {
-  text-decoration: none;
   color: white;
   transition: margin-left 1s;
 }
@@ -1274,6 +1274,7 @@ footer .text .block_for_adress .amail {
 footer .text .block_for_adress .amail a {
   text-decoration: none;
   transition: margin-left 1s;
+  color: white;
 }
 
 footer .text .block_for_adress .amail a:hover {
@@ -1381,7 +1382,7 @@ footer .line_1 {
   border-left: 70px solid transparent;
   border-right: 70px solid transparent;
   border-top: 160px solid #282323;
-  margin-left: 1548px;
+  margin-left: 1548.4px;
   margin-top: 270px;
 }
 
@@ -1447,14 +1448,19 @@ footer .block_about_cite .telega_Dana img {
   margin-top: -55px;
 }
 
-footer .arrow {
+footer .back-to-top-btn {
   position: absolute;
   z-index: 0;
+  border: none;
 }
 
-footer .arrow img {
+footer .back-to-top-btn:focus {
+  border: none;
+}
+
+footer .back-to-top-btn img {
   margin-top: -150px;
   height: 80px;
   position: absolute;
-  margin-left: 1585px;
+  margin-left: 1590px;
 }
