--- a/sob2_ru/sob2_ru.scss
+++ b/sob2_ru/sob2_ru.scss
@@ -95,9 +95,10 @@ nav .content .links{
 .content .links li label{
   display: none;
 }
-.content .links .hover:hover{
-    text-decoration: line-through;
-    transition: 10s ease-in-out;
+.content .links .hover:hover a{
+    color: rgb(233, 30, 99);
+    transition: 1.5s ease-in-out;
+    background-color: white;
 }
 .menu .menu-icon{
   display: none;
@@ -128,6 +129,27 @@ nav .content .links{
   color: rgb(233, 30, 99);
   background-color: white;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 .sport1{ 
   padding-top: 75px;
   display: flex;
@@ -889,7 +911,6 @@ footer {
   margin-top: 2290px;
   position: absolute;
   width: 1688px;
-  z-index: 666;
 }
 footer .block_img img {
   margin-left: 40px;
@@ -965,7 +986,6 @@ footer .text .block_for_adress .adress {
   margin-top: -320px;
 }
 footer .text .block_for_adress .adress a {
-  text-decoration: none;
   color: white;
   transition: margin-left 1s;
 }
@@ -983,6 +1003,7 @@ footer .text .block_for_adress .amail {
 footer .text .block_for_adress .amail a {
   text-decoration: none;
   transition: margin-left 1s;
+  color: white;
 }
 footer .text .block_for_adress .amail a:hover {
   color: #ff8c00;
@@ -1071,7 +1092,7 @@ footer .line_1 {
   border-left: 70px solid transparent;
   border-right: 70px solid transparent;
   border-top: 160px solid #282323;
-  margin-left: 1548px;
+  margin-left: 1548.4px;
   margin-top: 270px;
 }
 footer .line_2 {
@@ -1125,13 +1146,17 @@ footer .block_about_cite .telega_Dana img {
   height: 50px;
   margin-top: -55px;
 }
-footer .arrow {
+footer .back-to-top-btn{
   position: absolute;
   z-index: 0;
+  border: none;
 }
-footer .arrow img {
+footer .back-to-top-btn:focus{
+  border: none;
+}
+footer .back-to-top-btn img {
   margin-top: -150px;
   height: 80px;
   position: absolute;
-  margin-left: 1600px;
+  margin-left: 1590px;
 }
