--- a/About us.css
+++ b/About us.css
@@ -2278,8 +2278,6 @@ footer {
   margin-top: 6680px;
   position: absolute;
   width: 1688px;
-  -webkit-user-select: none;
-          user-select: none;
 }
 
 footer .block_img img {
@@ -2572,17 +2570,17 @@ footer .block_about_cite .telega_Dana img {
   margin-top: -55px;
 }
 
-footer .back-to-top-btn {
+footer .back_to_top_btn {
   position: absolute;
   z-index: 0;
   border: none;
 }
 
-footer .back-to-top-btn:focus {
+footer .back_to_top_btn:focus {
   border: none;
 }
 
-footer .back-to-top-btn .photo {
+footer .back_to_top_btn .photo {
   margin-top: -150px;
   height: 80px;
   position: absolute;
